--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,9 @@
-header {
+.barra {
 	background-color: #F94C4C;
-	padding: auto;
 }
 
 nav {
 	margin-bottom: auto !important;
-	margin-left: 4%;
-	margin-right: 4%;
 }
 
 .portada {
@@ -21,6 +18,7 @@ nav {
 	padding: 5%;
 	width: 100%;
 	background-color: #F4F0BB;
+	color: #DA2C38;
 }
 
 .rojo {
